================================================================================
February 2017
 + Added specific user settings for PM and/or EMail notifications
 + Added option to send notification Emails/PMs in bulk
 + Main language files loaded with pre_load hook
 + Links from emails while not logged in triggers login prompt that redirects to arcade action/sa
 ! Eliminated/changed deprecated css in templates
 ! Various aesthetic template fixes for light/dark themes
 ! Fixed typing enter after save comment
 ! Fixed profile area to show users top 10 - 1st, 2nd & 3rd high score placements
 ! Fixed SMF 2.1 installation for profile area hook changes
 ! Fixed PM, EMail & Arena/Match notifications
 ! Fixed guest permissions for games with no opted category

SMF Arcade 2.5 RC4                                                    xx.12.2015
================================================================================
December 2015
 + SMF 2.0.X branch support
 + SMF 2.1.X branch support
 + Added option to select E-Arcade skin
 + Added category maintenance options
 + Arcade list type available for all templates
 + Added option to view/hide information center
 + Default list now uses horizontal button navigation
 + Added additional list display options
 + Added unique unzip & gz sub-routines
 + Option to delete files within the game install list
 + Added HTML5 Upload sub-routine
 ! Removed PDL custom template
 ! File permission issue for some host configuration fixed
 ! Updated license & its hyperlinks
 ! Adjusted css for arcade info center
 ! Fixed arcade & game container upshrink
 ! Opting to view a report from the list now shows its specific game report
 ! Sanitized code including the removal of Heredoc syntax from the Jeza template
 ! Fixed "new" category
 ! Fixed behavior of sorting options
 ! Download sub-routine compresses entire game folder if it exists else default game files within Game directory
