@@ -203,7 +203,7 @@ function template_arcade_list()
 	{
 		echo '
 		<span class="clear upperframe"><span></span></span>
-		<div class="roundframe">
+		<div class="roundframe" style="border-radius: 3px;">
 			<div class="innerframe">
 				<div class="centertext" style="opacity: 0.7;">
 					<h3 class="centertext" style="opacity: 0.7;">
